--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -12,6 +12,7 @@
 #  created_at   :datetime         not null
 #  updated_at   :datetime         not null
 #  user_id      :bigint           not null
+#  status       :boolean          default(FALSE)
 #
 
 one:
