setting module sells v1

--- a/test/fixtures/balances.yml
+++ b/test/fixtures/balances.yml
@@ -8,6 +8,7 @@
 #  currency      :string
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
+#  balance_xau   :decimal(, )      default(0.0)
 #
 
 one:
