--- a/test/fixtures/deposits.yml
+++ b/test/fixtures/deposits.yml
@@ -9,7 +9,7 @@
 #  status       :string
 #  user_id      :bigint           not null
 #  file_deposit :string
-#  bank_id      :bigint           not null
+#  bank_id      :bigint
 #  description  :string
 #
 
