akhirnya selesai withdraw crypto

--- a/test/fixtures/withdraw_cryptos.yml
+++ b/test/fixtures/withdraw_cryptos.yml
@@ -2,14 +2,19 @@
 #
 # Table name: withdraw_cryptos
 #
-#  id             :bigint           not null, primary key
-#  xau_amount     :decimal(, )
-#  status         :string
-#  user_id        :bigint           not null
-#  created_at     :datetime         not null
-#  updated_at     :datetime         not null
-#  address        :string
-#  evm_network_id :bigint           not null
+#  id               :bigint           not null, primary key
+#  status           :string
+#  user_id          :bigint           not null
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#  to_address       :string
+#  chain_id         :bigint           not null
+#  currency         :string
+#  amount           :decimal(, )      default(0.0)
+#  amount_after_fee :decimal(, )      default(0.0)
+#  txhash           :string
+#  contract_address :string
+#  fee              :decimal(, )      default(0.0)
 #
 
 one:
